# FMI_Python

./: .gitignore  README.md  pyproject.toml
src/client/: gui.py  network.py
src/server/: server_main.py
tests/: conftest.py  test_crypto.py  test_database.py  test_gui.py  test_network.py  test_protocol.py  test_server_main.py
