[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course_project"
version = "0.0.1"
description = "My Python Project"
requires-python = ">=3.10"
dependencies = [
    "customtkinter",
    "cryptography",
    "Pillow",
    "pytest",
    "pytest-cov",
    "coverage",
    "mypy",
    "pylint",
    "requests",
    "python-dotenv" 
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["src*"]  

# --- MYPY НАСТРОЙКИ ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "customtkinter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

# --- PYTEST НАСТРОЙКИ ---
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"

# --- PYLINT НАСТРОЙКИ ---
[tool.pylint.format]
max-line-length = 120